[package]
name = "sugata_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = { git = "https://github.com/kangalioo/poise", rev = "6eb7639" }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "sync"] }
rand = "0.8.5"
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "^0.23.0"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^6.6"
